err/template-python.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Template_Python-0.1.post1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/template'...
Compiling './lib/python3.5/site-packages/template/context.py'...
***   File "./lib/python3.5/site-packages/template/context.py", line 686
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/template/document.py'...
***   File "./lib/python3.5/site-packages/template/document.py", line 181
    print block
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/template/filters.py'...
***   File "./lib/python3.5/site-packages/template/filters.py", line 721
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/template/namespace'...
Compiling './lib/python3.5/site-packages/template/parser.py'...
***   File "./lib/python3.5/site-packages/template/parser.py", line 972
    except TemplateException, e:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/template/plugin'...
Compiling './lib/python3.5/site-packages/template/plugin/datafile.py'...
***   File "./lib/python3.5/site-packages/template/plugin/datafile.py", line 92
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/template/plugin/directory.py'...
***   File "./lib/python3.5/site-packages/template/plugin/directory.py", line 209
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/template/plugin/file.py'...
***   File "./lib/python3.5/site-packages/template/plugin/file.py", line 312
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/template/plugin/format.py'...
***   File "./lib/python3.5/site-packages/template/plugin/format.py", line 57
    except TypeError, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/template/plugin/image.py'...
***   File "./lib/python3.5/site-packages/template/plugin/image.py", line 178
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/template/plugins.py'...
***   File "./lib/python3.5/site-packages/template/plugins.py", line 512
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/template/provider.py'...
***   File "./lib/python3.5/site-packages/template/provider.py", line 667
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/template/service.py'...
***   File "./lib/python3.5/site-packages/template/service.py", line 476
    except TemplateException, e:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/template/stash.py'...
***   File "./lib/python3.5/site-packages/template/stash.py", line 977
    return 0L
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/template/test.py'...
***   File "./lib/python3.5/site-packages/template/test.py", line 74
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/template/util.py'...
***   File "./lib/python3.5/site-packages/template/util.py", line 502
    exec code in vars
            ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/template/view.py'...
***   File "./lib/python3.5/site-packages/template/view.py", line 543
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/template/vmethods.py'...
***   File "./lib/python3.5/site-packages/template/vmethods.py", line 461
    return 0L
            ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
